style: Ensure about-section--text is left-aligned
- Remove `text-align: center`'s for cleaner UI/UX.

--- a/src/style/sections/_about.scss
+++ b/src/style/sections/_about.scss
@@ -49,11 +49,9 @@
 
         @include respond(tab-port) {
           font-size: 1.5rem;
-          text-align: center;
         }
         @include respond(phone) {
           font-size: 1.6rem;
-          text-align: center;
         }
 
         &--important {
